# chain-pulse

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: _build-image.yml  docker.yml  release.yml  rust.yml
alerter/: Cargo.toml  networks.toml
alerter/src/: error.rs  event_types.rs  events.rs  main.rs  md_format.rs  p2p_network.rs  slots.rs  stall_and_reorg.rs  uptime.rs
docker/: .dockerignore  indexer.Dockerfile
indexer/: Cargo.toml  config.toml
indexer/migrations/: 0001_initial.sql  0002_timestamp.sql  0003_add_missing_indexes.sql  0004_staking.sql  0005_fix_nominator_counts.sql  0006_deposits_withdrawals.sql  0007_deposits_withdrawals_type_changes.sql
indexer/src/: api.rs  error.rs  events.rs  main.rs  processor.rs  rpc_types.rs  staking.rs  storage.rs  test_utils.rs  types.rs  xdm.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  subspace.rs  types.rs
