[package]
name = "indexer"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
futures-util.workspace = true
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-encode.workspace = true
scale-decode.workspace = true
serde = { workspace = true, features = ["derive"] }
shared.workspace = true
subxt = { workspace = true, features = ["native", "jsonrpsee", "reconnecting-rpc-client"] }
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true

[dev-dependencies]
hex-literal.workspace = true

[lints]
workspace = true
