[package]
name = "indexer"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
futures-util.workspace = true
parity-scale-codec = { workspace = true, features = ["derive"] }
rust_decimal.workspace = true
scale-encode.workspace = true
scale-decode.workspace = true
serde.workspace = true
shared.workspace = true
sp-core.workspace = true
subxt = { workspace = true, features = ["native", "jsonrpsee", "reconnecting-rpc-client"] }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "derive", "migrate", "time", "chrono"] }
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
hex-literal.workspace = true
pgtemp.workspace = true

[lints]
workspace = true
